--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina Principal</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="styles/principal.css" />
-    <script src="script.js" defer></script>
+    <title>Página Principal</title>
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/principal.css" />
+    <script src="./script.js" defer></script>
   </head>
+
   <body>
     <nav class="navbar">
       <div class="logo">
-        <a href="../index.html">
+        <a href="./index.html">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="./images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -23,19 +24,19 @@
       <div class="menu">
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="images/book_.png" alt="livro" class="icon" />
+            <img src="./images/book_.png" alt="livro" class="icon" />
             Guia de Estudos
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/guideStudy.html">Guia de Estudos</a>
+            <a href="./navBarPages/guideStudy.html">Guia de Estudos</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
             <img
-              src="images/two-way-arrows-line_.png"
+              src="./images/two-way-arrows-line_.png"
               alt="setas"
               class="icon"
             />
@@ -43,41 +44,49 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/conversor.html">Velocidade</a>
+            <a href="./navBarPages/conversor.html">Velocidade</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/calculator_.png" alt="calculadora" class="icon" />
+            <img
+              src="./images/calculator_.png"
+              alt="calculadora"
+              class="icon"
+            />
             Calculadora
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/calculator.html">Simples</a>
+            <a href="./navBarPages/calculator.html">Simples</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/profile-circle_.png" alt="usuário" class="icon" />
+            <img
+              src="./images/profile-circle_.png"
+              alt="usuário"
+              class="icon"
+            />
             Perfil
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/admin.html">Admin</a>
-            <a href="/login-signup/cadastro.html">Sair</a>
+            <a href="./navBarPages/admin.html">Admin</a>
+            <a href="./login-signup/cadastro.html">Sair</a>
           </div>
         </div>
 
         <div>
-          <a href="/navBarPages/about.html">Sobre</a>
+          <a href="./navBarPages/about.html">Sobre</a>
         </div>
       </div>
     </nav>
 
     <section class="features">
-      <h1>Bem-vindo ao LeftCalculator</h1>
+      <h1>Bem-vindo ao LeafCalculator</h1>
       <p>
         Sua calculadora online confiável para todas as suas necessidades
         matemáticas.
@@ -85,31 +94,35 @@
 
       <div class="features-container">
         <div class="feature-card">
-          <img src="images/calculator-circle_.png" alt="Calculadora" />
+          <img src="./images/calculator-circle_.png" alt="Calculadora" />
           <h2>Calculadora Simples</h2>
           <p>Aqui você pode realizar cálculos simples.</p>
-          <button onclick="window.location.href='navBarPages/calculator.html'">
+          <button
+            onclick="window.location.href='./navBarPages/calculator.html'"
+          >
             Acessar Calculadora Simples
           </button>
         </div>
 
         <div class="feature-card">
-          <img src="/images/convertio_.png" alt="Conversor" />
+          <img src="./images/convertio_.png" alt="Conversor" />
           <h2>Conversor de Unidades</h2>
           <p>Converta entre diferentes unidades de medida facilmente.</p>
-          <button onclick="window.location.href='navBarPages/conversor.html'">
+          <button onclick="window.location.href='./navBarPages/conversor.html'">
             Acessar Conversor de Unidades
           </button>
         </div>
 
         <div class="feature-card">
-          <img src="/images/book-circle_.png" alt="Guia de Estudos" />
+          <img src="./images/book-circle_.png" alt="Guia de Estudos" />
           <h2>Guia de Estudos</h2>
           <p>
             Encontre recursos e materiais para ajudar em seus estudos
             matemáticos.
           </p>
-          <button onclick="window.location.href='navBarPages/guideStudy.html'">
+          <button
+            onclick="window.location.href='./navBarPages/guideStudy.html'"
+          >
             Acessar Guia de Estudos
           </button>
         </div>
@@ -120,21 +133,21 @@
       <h2>Tudo sobre o LeafCalculator</h2>
       <p>
         O LeafCalculator foi criado para facilitar seus estudos e cálculos
-        matemáticos. Ele reúne diversas ferramentas em um só lugar desde uma
-        calculadora simples poderosa até um guia completo de estudos e
+        matemáticos. Ele reúne diversas ferramentas em um só lugar — desde uma
+        calculadora simples e poderosa até um guia completo de estudos e
         conversores práticos. O objetivo é simples: ajudar você a aprender,
         entender e aplicar a matemática de forma eficiente.
       </p>
 
       <div class="topic">
-        <img src="/images/calculadorImage.jpg" alt="Calculadora Simples" />
+        <img src="./images/calculadorImage.jpg" alt="Calculadora Simples" />
         <div class="texto">
           <h3>Calculadora Simples</h3>
           <p>
             A Calculadora do LeafCalculator foi criada para ser prática e
             direta. Com ela, você realiza operações básicas como adição,
             subtração, multiplicação e divisão de forma rápida e precisa. Ideal
-            para o dia a dia, estudos e cálculos simples, perfeita para quem
+            para o dia a dia, estudos e cálculos simples — perfeita para quem
             busca agilidade e facilidade sem complicação.
           </p>
         </div>
@@ -142,7 +155,7 @@
 
       <div class="topic">
         <img
-          src="/images/guiaEstudosImage.webp"
+          src="./images/guiaEstudosImage.webp"
           alt="Guia de Estudos de Matemática"
         />
         <div class="texto">
@@ -158,7 +171,7 @@
       </div>
 
       <div class="topic">
-        <img src="/images/conversorImage.jpg" alt="Conversor Matemático" />
+        <img src="./images/conversorImage.jpg" alt="Conversor Matemático" />
         <div class="texto">
           <h3>Conversor Matemático</h3>
           <p>
@@ -186,7 +199,7 @@
     <section id="inspiration" class="inspiration">
       <div class="container">
         <div class="inspiration-imagem">
-          <img src="/images/SymbolabImage.png" alt="Inspiração: Symbolab" />
+          <img src="./images/SymbolabImage.png" alt="Inspiração: Symbolab" />
         </div>
         <div class="inspiration-texto">
           <h2>Inspirado pelo Symbolab</h2>
@@ -200,7 +213,7 @@
             A inspiração está nos detalhes: mostrar o caminho, não apenas o
             resultado; tornar o cálculo acessível; guiar o estudante com clareza
             e simplicidade. O LeafCalculator busca carregar essa luz adiante,
-            trazendo ferramentas personalizadas com o mesmo foco no aprendizado
+            trazendo ferramentas personalizadas com o mesmo foco no aprendizado,
             adaptadas ao seu estilo.
           </p>
           <a
@@ -219,7 +232,7 @@
       <div class="footer-container">
         <div class="footer-section">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="./images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -227,12 +240,12 @@
           <p><strong>Email:</strong> suporte@leftcalculator.com</p>
           <div class="social-icons">
             <a href="#"
-              ><img src="../images/instagram-circle_.png" alt="Instagram"
+              ><img src="./images/instagram-circle_.png" alt="Instagram"
             /></a>
             <a href="#"
-              ><img src="../images/youtube-with-circle_.png" alt="YouTube"
+              ><img src="./images/youtube-with-circle_.png" alt="YouTube"
             /></a>
-            <a href="#"><img src="../images/facebook_.png" alt="Facebook" /></a>
+            <a href="#"><img src="./images/facebook_.png" alt="Facebook" /></a>
           </div>
         </div>
 
@@ -262,18 +275,18 @@
         <div class="footer-section">
           <h4>MENU PRINCIPAL</h4>
           <ul>
-            <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="/navBarPages/conversor.html">Conversor</a></li>
-            <li><a href="/navBarPages/calculator.html">Calculadora</a></li>
-            <li><a href="/navBarPages/guideStudy.html">Guia de Estudos</a></li>
-            <li><a href="/navBarPages/about.html">Sobre Nós</a></li>
+            <li><a href="./index.html">Página Inicial</a></li>
+            <li><a href="./navBarPages/conversor.html">Conversor</a></li>
+            <li><a href="./navBarPages/calculator.html">Calculadora</a></li>
+            <li><a href="./navBarPages/guideStudy.html">Guia de Estudos</a></li>
+            <li><a href="./navBarPages/about.html">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>© 2024 LeftCalculator | Todos os direitos reservados</p>
-        <p>Desenvolvido por <strong>LeftCalculator Team</strong></p>
+        <p>© 2024 LeafCalculator | Todos os direitos reservados</p>
+        <p>Desenvolvido por <strong>LeafCalculator Team</strong></p>
       </div>
     </footer>
   </body>
