--- a/login-signup/cadastro.html
+++ b/login-signup/cadastro.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/cadastro.css" />
-    <script src="/script.js" defer></script>
+    <script src="../script.js" defer></script>
   </head>
+
   <body>
     <div class="logo">
-      <a href="../index.html"><img src="/images/logo.png" alt="Logo" /></a>
+      <a href="../index.html"><img src="../images/logo.png" alt="Logo" /></a>
     </div>
 
     <div class="Formulario">
       <div class="form-container">
         <div class="form-inner">
+          <!-- Formulário de Login -->
           <form action="#" class="login">
             <div class="title login">Login</div>
             <div class="field">
@@ -37,6 +39,7 @@
             </div>
           </form>
 
+          <!-- Formulário de Cadastro -->
           <form class="signup">
             <div class="title signup">Cadastro</div>
             <div class="field">
