--- a/navBarPages/about.html
+++ b/navBarPages/about.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/aboute.css" />
-
-    <script src="script.js" defer></script>
+    <script src="../script.js" defer></script>
   </head>
+
   <body>
     <nav class="navbar">
       <div class="logo">
         <a href="../index.html">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="../images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -30,7 +29,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Guia de Estudos</a>
+            <a href="./guideStudy.html">Guia de Estudos</a>
           </div>
         </div>
 
@@ -45,7 +44,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Velocidade</a>
+            <a href="./conversor.html">Velocidade</a>
           </div>
         </div>
 
@@ -60,7 +59,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/calculator.html">Simples</a>
+            <a href="./calculator.html">Simples</a>
           </div>
         </div>
 
@@ -75,13 +74,13 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/admin.html">Admin</a>
-            <a href="/login-signup/cadastro.html">Sair</a>
+            <a href="./admin.html">Admin</a>
+            <a href="../login-signup/cadastro.html">Sair</a>
           </div>
         </div>
 
         <div>
-          <a href="about.html">Sobre</a>
+          <a href="./about.html">Sobre</a>
         </div>
       </div>
     </nav>
@@ -90,7 +89,7 @@
       <div class="about-section">
         <h1>Sobre Nós</h1>
         <p>
-          Bem-vindo ao LeftCalculator! Somos uma equipe dedicada a fornecer
+          Bem-vindo ao LeafCalculator! Somos uma equipe dedicada a fornecer
           ferramentas úteis para facilitar seus cálculos diários. Nossa missão é
           oferecer uma experiência intuitiva e eficiente para todos os nossos
           usuários.
@@ -143,7 +142,7 @@
       <div class="footer-container">
         <div class="footer-section">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="../images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -187,17 +186,17 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="conversor.html">Conversor</a></li>
-            <li><a href="calculator.html">Calculadora</a></li>
-            <li><a href="guideStudy.html">Guia de Estudos</a></li>
-            <li><a href="about.html">Sobre Nós</a></li>
+            <li><a href="./conversor.html">Conversor</a></li>
+            <li><a href="./calculator.html">Calculadora</a></li>
+            <li><a href="./guideStudy.html">Guia de Estudos</a></li>
+            <li><a href="./about.html">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>© 2024 LeftCalculator | Todos os direitos reservados</p>
-        <p>Desenvolvido por <strong>LeftCalculator Team</strong></p>
+        <p>© 2024 LeafCalculator | Todos os direitos reservados</p>
+        <p>Desenvolvido por <strong>LeafCalculator Team</strong></p>
       </div>
     </footer>
   </body>
