--- a/navBarPages/admin.html
+++ b/navBarPages/admin.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina Admin</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
-
+    <title>Página Admin</title>
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/admin.css" />
-    <script src="/admin.js" defer></script>
+    <script src="../admin.js" defer></script>
   </head>
+
   <body>
     <nav class="navbar">
       <div class="logo">
         <a href="../index.html">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="../images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -24,19 +24,19 @@
       <div class="menu">
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/book_.png" alt="livro" class="icon" />
+            <img src="../images/book_.png" alt="livro" class="icon" />
             Guia de Estudos
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Guia de Estudos</a>
+            <a href="./guideStudy.html">Guia de Estudos</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
             <img
-              src="/images/two-way-arrows-line_.png"
+              src="../images/two-way-arrows-line_.png"
               alt="setas"
               class="icon"
             />
@@ -44,35 +44,43 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Velocidade</a>
+            <a href="./conversor.html">Velocidade</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/calculator_.png" alt="calculadora" class="icon" />
+            <img
+              src="../images/calculator_.png"
+              alt="calculadora"
+              class="icon"
+            />
             Calculadora
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/calculator.html">Simples</a>
+            <a href="./calculator.html">Simples</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/profile-circle_.png" alt="usuário" class="icon" />
+            <img
+              src="../images/profile-circle_.png"
+              alt="usuário"
+              class="icon"
+            />
             Perfil
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/admin.html">Admin</a>
-            <a href="/login-signup/cadastro.html">Sair</a>
+            <a href="./admin.html">Admin</a>
+            <a href="../login-signup/cadastro.html">Sair</a>
           </div>
         </div>
 
         <div>
-          <a href="/navBarPages/about.html">Sobre</a>
+          <a href="./about.html">Sobre</a>
         </div>
       </div>
     </nav>
@@ -135,7 +143,7 @@
       <div class="footer-container">
         <div class="footer-section">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="../images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -179,17 +187,17 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="#">Conversor</a></li>
-            <li><a href="#">Calculadora</a></li>
-            <li><a href="#">Perfil</a></li>
-            <li><a href="about.html">Sobre Nós</a></li>
+            <li><a href="./conversor.html">Conversor</a></li>
+            <li><a href="./calculator.html">Calculadora</a></li>
+            <li><a href="./guideStudy.html">Guia de Estudos</a></li>
+            <li><a href="./about.html">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>© 2024 LeftCalculator | Todos os direitos reservados</p>
-        <p>Desenvolvido por <strong>LeftCalculator Team</strong></p>
+        <p>© 2024 LeafCalculator | Todos os direitos reservados</p>
+        <p>Desenvolvido por <strong>LeafCalculator Team</strong></p>
       </div>
     </footer>
   </body>
