--- a/navBarPages/conversor.html
+++ b/navBarPages/conversor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conversor</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/converter.css" />
     <script src="../script.js" defer></script>
   </head>
@@ -13,7 +13,7 @@
       <div class="logo">
         <a href="../index.html">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="../images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -23,19 +23,19 @@
       <div class="menu">
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/book_.png" alt="livro" class="icon" />
+            <img src="../images/book_.png" alt="livro" class="icon" />
             Guia de Estudos
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/guideStudy.html">Guia de Estudos</a>
+            <a href="./guideStudy.html">Guia de Estudos</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
             <img
-              src="/images/two-way-arrows-line_.png"
+              src="../images/two-way-arrows-line_.png"
               alt="setas"
               class="icon"
             />
@@ -43,35 +43,43 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/conversor.html">Velocidade</a>
+            <a href="./conversor.html">Velocidade</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/calculator_.png" alt="calculadora" class="icon" />
+            <img
+              src="../images/calculator_.png"
+              alt="calculadora"
+              class="icon"
+            />
             Calculadora
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/calculator.html">Simples</a>
+            <a href="./calculator.html">Simples</a>
           </div>
         </div>
 
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="/images/profile-circle_.png" alt="usuário" class="icon" />
+            <img
+              src="../images/profile-circle_.png"
+              alt="usuário"
+              class="icon"
+            />
             Perfil
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/navBarPages/admin.html">Admin</a>
-            <a href="login-signup/cadastro.html">Sair</a>
+            <a href="./admin.html">Admin</a>
+            <a href="../login-signup/cadastro.html">Sair</a>
           </div>
         </div>
 
         <div>
-          <a href="navBarPages/about.html">Sobre</a>
+          <a href="./about.html">Sobre</a>
         </div>
       </div>
     </nav>
@@ -97,7 +105,7 @@
       <div class="footer-container">
         <div class="footer-section">
           <img
-            src="/images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
+            src="../images/d76b9ee5-c96d-4de7-bcad-0da6e120a6b1.png"
             alt="Logo"
             class="logo-img"
           />
@@ -141,17 +149,17 @@
           <h4>MENU PRINCIPAL</h4>
           <ul>
             <li><a href="../index.html">Página Inicial</a></li>
-            <li><a href="conversor.html">Conversor</a></li>
-            <li><a href="calculator.html">Calculadora</a></li>
-            <li><a href="guideStudy.html">Guia de Estudos</a></li>
-            <li><a href="about.html">Sobre Nós</a></li>
+            <li><a href="./conversor.html">Conversor</a></li>
+            <li><a href="./calculator.html">Calculadora</a></li>
+            <li><a href="./guideStudy.html">Guia de Estudos</a></li>
+            <li><a href="./about.html">Sobre Nós</a></li>
           </ul>
         </div>
       </div>
 
       <div class="footer-bottom">
-        <p>© 2024 LeftCalculator | Todos os direitos reservados</p>
-        <p>Desenvolvido por <strong>LeftCalculator Team</strong></p>
+        <p>© 2024 LeafCalculator | Todos os direitos reservados</p>
+        <p>Desenvolvido por <strong>LeafCalculator Team</strong></p>
       </div>
     </footer>
   </body>
