--- a/login-signup/cadastro.html
+++ b/login-signup/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,10 +10,12 @@
   </head>
 
   <body>
+    <!-- Logo -->
     <div class="logo">
       <a href="../index.html"><img src="../images/logo.png" alt="Logo" /></a>
     </div>
 
+    <!-- Formulários -->
     <div class="Formulario">
       <div class="form-container">
         <div class="form-inner">
